--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
   ],
   "dependencies": {
     "async": "^1.5.2",
-    "kevoree-entities": "^8.0.0"
+    "kevoree-entities": "^8.0.0",
+    "kevoree-library": "^5.0.9"
   },
   "devDependencies": {
     "grunt": "^0.4.1",
