--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
   "dependencies": {
     "async": "^1.5.2",
     "kevoree-entities": "^8.0.0",
-    "kevoree-library": "^5.0.9"
+    "kevoree-kotlin": "^1.0.3",
+    "kevoree-library": "^5.0.9",
+    "lodash": "^4.0.0"
   },
   "devDependencies": {
     "grunt": "^0.4.1",
